--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.8",
     "jose": "^5.6.3",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
