--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 JWT_SECRET="This is a Secret"
+POSTGRES_URL="postgres://default:D9v3YPatshTQ@ep-orange-surf-a1k3mq2u-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:D9v3YPatshTQ@ep-orange-surf-a1k3mq2u-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:D9v3YPatshTQ@ep-orange-surf-a1k3mq2u-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:D9v3YPatshTQ@ep-orange-surf-a1k3mq2u.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-orange-surf-a1k3mq2u-pooler.ap-southeast-1.aws.neon.tech"
+POSTGRES_PASSWORD="D9v3YPatshTQ"
+POSTGRES_DATABASE="verceldb"
